--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,3 +1,3 @@
 name: KoreRecoded
 version: '${project.version}'
-main: me.ghostdevelopment.spigotessentials.bungee.Kore
+main: me.ghostdevelopment.kore.bungee.Kore
