--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -35,6 +35,7 @@ commands:
   kill:
   warp:
   home:
+  speed:
 
 
 permissions:
@@ -83,4 +84,6 @@ permissions:
   kore.warp.admin:
     description: ""
   kore.home:
+    description: ""
+  kore.speed:
     description: ""
