--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.ghostdevelopment</groupId>
     <artifactId>Kore</artifactId>
-    <version>1.6 RECODED</version>
+    <version>1.7</version>
     <packaging>jar</packaging>
 
     <name>KoreRecoded</name>
