--- a/src/main/resources/messages-it.yml
+++ b/src/main/resources/messages-it.yml
@@ -1,3 +1,5 @@
+#By JustToroo
+
 prefix: '&b&lKore&f:'
 no-permissions: '%prefix% &cNon hai permessi.'
 only-players: '%prefix% &cSolo giocatori possono eseguire questo commando!'
