--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
                                     </includes>
                                 </resource>
                             </resources>
+                            <overwrite>true</overwrite>
                         </configuration>
                     </execution>
                 </executions>
