--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -48,8 +48,13 @@ chat:
     - shit
 messages: en
 
+server:
+  # Make it null if or leave it empty you want to disable join messages
+  join-msg: "&8[&a+&8] &f%player%"
+  leave-msg: "&8[&c-&8] &f%player%"
+
 world-manipulator:
-  enable: true
+  enable: false
   rules:
     anti-hunger: true
     anti-weather: true
