--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.ghostdevelopment</groupId>
     <artifactId>Kore</artifactId>
-    <version>1.14</version>
+    <version>1.14.1</version>
     <packaging>jar</packaging>
 
     <name>KoreRecoded</name>
@@ -89,7 +89,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>./server_test/plugins/</outputDirectory>
+                            <outputDirectory>/run/media/andrea/2TB Drive/Servers/BedWars_Funny/spigot/plugins</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>${project.build.directory}</directory>
